--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1> 9EED's webiste </h1>
+<!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="./style.css">
+  <title>9EED's webiste</title>
+</head>
+<body>
+  <h1> 9EED's webiste </h1>
+</body>
