--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <head>
   <link rel="stylesheet" href="./style.css">
   <title>9EED's webiste</title>
+  <meta charset="UTF-8" />
+  <meta name="description" content="9EED's website">
+  <meta name="author" content="9EED" />
 </head>
 <body>
-  <h1> 9EED's webiste </h1>
+  <div id="background"></div>
+  <main>
+    <div id="landing-page">
+      <div id="main-title">9EED's webiste</div>
+      <div class="arrow-down"></div>
+    </div>
+    ppp
+  </main>
 </body>
