--- a/index.html
+++ b/index.html
@@ -1,18 +1,91 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" href="./style.css">
-  <title>9EED's webiste</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="9EED's website">
-  <meta name="author" content="9EED" />
+	<link rel="stylesheet" href="./files/style.css">
+	<title>9EED's webiste</title>
+	<meta charset="UTF-8" />
+	<meta name="description" content="9EED's website">
+	<meta name="author" content="9EED" />
+	<script defer src="./files/script.js"></script>
 </head>
 <body>
-  <div id="background"></div>
-  <main>
-    <div id="landing-page">
-      <div id="main-title">9EED's webiste</div>
-      <div class="arrow-down"></div>
-    </div>
-    ppp
-  </main>
+
+  	<div id="background">
+		  <canvas id='canvas'></canvas>
+	  </div>
+	
+	<div id="landing-page">
+		<div id="main-title">9EED's webiste</div>
+		<a href="#about-me-page" class="arrow-down"></a>
+	</div>
+	
+	<div id="about-me-page">
+		<div id="about-me-container">
+			<div id="about-me-title">about me</div>
+			<div id="about-me">
+				Hello I am 9EED, a web developer an artist and a high-school student in Algeria.
+			</div>
+		</div>
+	</div>
+
+	<div id="projects-page">
+			<div id="projects-container">
+				<div id="projects">
+					<div id="top-projects-title">top projects</div>
+					<div id="projects-grid">
+						<a href="https://9EED.github.io/connect-4" target="_blank" class="project">
+							<div class="project-title">
+								connect-4
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/connect-4.jpg" alt="connect-4" />
+							</div>
+						</a>
+						<a href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
+							<div class="long-title">
+								conway's game of life
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/conways-game-of-life.jpg" alt="conways-game-of-life" />
+							</div>
+						</a>
+						<a href="https://9EED.github.io/chimist" target="_blank" class="project">
+							<div class="project-title">
+								chimist
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/chimist.jpg" alt="chimist" />
+							</div>
+						</a>
+						<a href="https://9EED.github.io/turn-based" target="_blank" class="project">
+							<div class="project-title">
+								turn-based
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/turn-based.jpg" alt="turn-based" />
+							</div>
+						</a>
+						<a href="https://9EED.github.io/9EED" target="_blank" class="project">
+							<div class="project-title">
+								9EED's website
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/9EED's-website.jpg" alt="9EED's webiste" />
+							</div>
+						</a>
+						<a href="https://9EED.github.io/9EED" target="_blank" class="project">
+							<div class="project-title">
+								chimcken
+							</div>
+							<div class="project-image-holder" >
+								<img class="project-image" src="./files/images/image.jpg" alt="chimken" />
+							</div>
+						</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<footer>
+		FOOTER
+	</footer>
 </body>
