--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<link rel="stylesheet" href="./files/style.css">
+	<link rel="icon" type="image/x-icon" href="./files/images/9.png" />
 	<title>9EED's webiste</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's website">
@@ -22,7 +23,53 @@
 		<div id="about-me-container">
 			<div id="about-me-title">about me</div>
 			<div id="about-me">
-				Hello I am 9EED, a web developer an artist and a high-school student in Algeria.
+				Hello I am 9EED also known as Zeghdani Salah eddine,
+				I'm a web developer an artist and a high-school student
+				in Algeria.
+			</div>
+		</div>
+	</div>
+
+	<div id="skill-set-page">
+		<div id="skill-set-container">
+			<div id="skill-set-title">skill set</div>
+			<div id="skill-set">
+				<a class="skill">
+					<div class="skill-image">
+						<img src="./files/images/web.png" alt="">
+					</div>
+					<div class="skill-title">Web dev</div>
+					<div class="skill-details">
+						designing websites using HTML CSS and JavaScript
+					</div>
+				</a>
+				<a class="skill">
+					<div class="skill-image">
+						<img src="./files/images/drawing.png" alt="">
+					</div>
+					<div class="skill-title">drawing</div>
+					<div class="skill-details">
+						pincle and pen drawings on paper
+					</div>
+				</a>
+				<a class="skill">
+					<div class="skill-image">
+						<img src="./files/images/3D.png" alt="">
+					</div>
+					<div class="skill-title">3D animation</div>
+					<div class="skill-details">
+						3D animation and modeling using blender
+					</div>
+				</a>
+				<a class="skill">
+					<div class="skill-image">
+						<img src="" alt="">
+					</div>
+					<div class="skill-title">skill4</div>
+					<div class="skill-details">
+						skill
+					</div>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -85,7 +132,51 @@
 		</div>
 	</div>
 
-	<footer>
-		FOOTER
+	<div id="contacts-page">
+		<div id="contacts-container">
+			<div id="contacts-title">contacts</div>
+			<div id="contacts">
+				<a class="contact" id="email">
+					<div class="contact-image">
+						<img src="./files/images/email.png" alt="email">
+					</div>
+					<div class="contact-title">email</div>
+					<div class="contact-details">
+						zeghdns@gmail.com
+					</div>
+				</a>
+				<a class="contact" id="phone">
+					<div class="contact-image">
+						<img src="./files/images/phone.png" alt="phone">
+					</div>
+					<div class="contact-title">phone</div>
+					<div class="contact-details">
+						0123456789
+					</div>
+				</a>
+				<a class="contact" id="github" href="https://github.com/9EED" target="_blank">
+					<div class="contact-image">
+						<img src="./files/images/github.png" alt="github">
+					</div>
+					<div class="contact-title">github</div>
+					<div class="contact-details">
+						@9EED
+					</div>
+				</a>
+				<a class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
+					<div class="contact-image">
+						<img src="./files/images/instagram.png" alt="instagram">
+					</div>
+					<div class="contact-title">instagram</div>
+					<div class="contact-details">
+						@salah.zeghdani
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+	
+	<footer id="footer">
+		THIS WEBSITE IS A WORK IN PROGRESS
 	</footer>
 </body>
