--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 								<img class="project-image" src="./files/images/9EED's-website.jpg" alt="9EED's webiste" />
 							</div>
 						</a>
-						<a href="https://9EED.github.io/9EED" target="_blank" class="project">
+						<a class="project">
 							<div class="project-title">
-								chimcken
+								project 6
 							</div>
 							<div class="project-image-holder" >
 								<img class="project-image" src="./files/images/image.jpg" alt="chimken" />
