--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="about-me-container">
 			<div id="about-me-title">about me</div>
 			<div id="about-me">
-				Hello I am 9EED also known as Zeghdani Salah eddine,
+				Hello I am Zeghdani Salah eddine also known as 9EED,
 				I'm a web developer an artist and a high-school student
 				in Algeria.
 			</div>
