--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 		  <canvas id='canvas'></canvas>
 	  </div>
 	
-	<div id="landing-page">
+	<div id="landing-page" tabindex="1" >
 		<div id="main-title">9EED's webiste</div>
-		<a href="#about-me-page" class="arrow-down"></a>
+		<a tabindex="-1" href="#about-me-page" id="down">
+			<img src="./files/images/down.png" alt="down">
+		</a>
 	</div>
 	
-	<div id="about-me-page">
+	<div id="about-me-page" tabindex="2" >
 		<div id="about-me-container">
 			<div id="about-me-title">about me</div>
 			<div id="about-me">
@@ -30,11 +32,11 @@
 		</div>
 	</div>
 
-	<div id="skill-set-page">
+	<div id="skill-set-page" tabindex="3" >
 		<div id="skill-set-container">
 			<div id="skill-set-title">skill set</div>
 			<div id="skill-set">
-				<a class="skill">
+				<a tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/web.png" alt="">
 					</div>
@@ -43,7 +45,7 @@
 						designing websites using HTML CSS and JavaScript
 					</div>
 				</a>
-				<a class="skill">
+				<a tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/drawing.png" alt="">
 					</div>
@@ -52,7 +54,7 @@
 						pincle and pen drawings on paper
 					</div>
 				</a>
-				<a class="skill">
+				<a tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/3D.png" alt="">
 					</div>
@@ -61,7 +63,7 @@
 						3D animation and modeling using blender
 					</div>
 				</a>
-				<a class="skill">
+				<a tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="" alt="">
 					</div>
@@ -74,12 +76,12 @@
 		</div>
 	</div>
 
-	<div id="projects-page">
+	<div id="projects-page" tabindex="4" >
 			<div id="projects-container">
 				<div id="projects">
 					<div id="top-projects-title">top projects</div>
 					<div id="projects-grid">
-						<a href="https://9EED.github.io/connect-4" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/connect-4" target="_blank" class="project">
 							<div class="project-title">
 								connect-4
 							</div>
@@ -87,7 +89,7 @@
 								<img class="project-image" src="./files/images/connect-4.jpg" alt="connect-4" />
 							</div>
 						</a>
-						<a href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
 							<div class="long-title">
 								conway's game of life
 							</div>
@@ -95,7 +97,7 @@
 								<img class="project-image" src="./files/images/conways-game-of-life.jpg" alt="conways-game-of-life" />
 							</div>
 						</a>
-						<a href="https://9EED.github.io/chimist" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="project">
 							<div class="project-title">
 								chimist
 							</div>
@@ -103,7 +105,7 @@
 								<img class="project-image" src="./files/images/chimist.jpg" alt="chimist" />
 							</div>
 						</a>
-						<a href="https://9EED.github.io/turn-based" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="project">
 							<div class="project-title">
 								turn-based
 							</div>
@@ -111,7 +113,7 @@
 								<img class="project-image" src="./files/images/turn-based.jpg" alt="turn-based" />
 							</div>
 						</a>
-						<a href="https://9EED.github.io/9EED" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="project">
 							<div class="project-title">
 								9EED's website
 							</div>
@@ -119,7 +121,7 @@
 								<img class="project-image" src="./files/images/9EED's-website.jpg" alt="9EED's webiste" />
 							</div>
 						</a>
-						<a class="project">
+						<a tabindex="-1" class="project">
 							<div class="project-title">
 								project 6
 							</div>
@@ -132,11 +134,11 @@
 		</div>
 	</div>
 
-	<div id="contacts-page">
+	<div id="contacts-page" tabindex="5" >
 		<div id="contacts-container">
 			<div id="contacts-title">contacts</div>
 			<div id="contacts">
-				<a class="contact" id="email">
+				<a tabindex="-1" class="contact" id="email">
 					<div class="contact-image">
 						<img src="./files/images/email.png" alt="email">
 					</div>
@@ -145,7 +147,7 @@
 						zeghdns@gmail.com
 					</div>
 				</a>
-				<a class="contact" id="phone">
+				<a tabindex="-1" class="contact" id="phone">
 					<div class="contact-image">
 						<img src="./files/images/phone.png" alt="phone">
 					</div>
@@ -154,7 +156,7 @@
 						0123456789
 					</div>
 				</a>
-				<a class="contact" id="github" href="https://github.com/9EED" target="_blank">
+				<a tabindex="-1" class="contact" id="github" href="https://github.com/9EED" target="_blank">
 					<div class="contact-image">
 						<img src="./files/images/github.png" alt="github">
 					</div>
@@ -163,7 +165,7 @@
 						@9EED
 					</div>
 				</a>
-				<a class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
+				<a tabindex="-1" class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="contact-image">
 						<img src="./files/images/instagram.png" alt="instagram">
 					</div>
@@ -177,6 +179,6 @@
 	</div>
 	
 	<footer id="footer">
-		THIS WEBSITE IS A WORK IN PROGRESS
+		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com">Icons8 </a></div>
 	</footer>
 </body>
