--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's website">
 	<meta name="author" content="9EED" />
+	<meta property="og:image" content="./files/images/9.png" />
 	<script defer src="./files/script.js"></script>
 </head>
 <body>
@@ -179,6 +180,6 @@
 	</div>
 	
 	<footer id="footer">
-		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com">Icons8 </a></div>
+		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1">Icons8 </a></div>
 	</footer>
 </body>
