--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div id="skill-set">
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/web.png" alt="">
+						<img src="./files/images/web.png">
 					</div>
 					<div class="skill-title">Web dev</div>
 					<div class="skill-details">
@@ -48,7 +48,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/drawing.png" alt="">
+						<img src="./files/images/drawing.png">
 					</div>
 					<div class="skill-title">drawing</div>
 					<div class="skill-details">
@@ -57,7 +57,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/3D.png" alt="">
+						<img src="./files/images/3D.png">
 					</div>
 					<div class="skill-title">3D animation</div>
 					<div class="skill-details">
@@ -66,7 +66,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="" alt="">
+						<img src="./files/images/image.jpg">
 					</div>
 					<div class="skill-title">skill4</div>
 					<div class="skill-details">
@@ -181,5 +181,6 @@
 	
 	<footer id="footer">
 		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1">Icons8 </a></div>
+		<div>this website is a work in progress</div>
 	</footer>
 </body>
