--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 
   	<div id="background">
 		  <canvas id='canvas'></canvas>
-	  </div>
+	</div>
+
+	<div id="show-list">
+		<img src="./files/images/menu.png">
+		<div id="list">
+			<div id="list-title">shortcuts</div>
+			<a class="list-item" href="#landing-page">landing page</a>
+			<a class="list-item" href="#about-me-page">about me</a>
+			<a class="list-item" href="#skill-set-page">skill set</a>
+			<a class="list-item" href="#projects-page">projects</a>
+			<a class="list-item" href="#contacts-page">contacts</a>
+		</div>
+	</div>
 	
 	<div id="landing-page" tabindex="1" >
 		<div id="main-title">9EED's webiste</div>
@@ -179,8 +191,9 @@
 		</div>
 	</div>
 	
-	<footer id="footer">
+	<footer id="footer" tabindex="6">
 		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1">Icons8 </a></div>
 		<div>this website is a work in progress</div>
 	</footer>
+
 </body>
