--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <head>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDEP7T1MEX"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-CDEP7T1MEX');
+	</script>
+	<!---->
+
 	<link rel="stylesheet" href="./files/style.css">
 	<link rel="icon" type="image/x-icon" href="./files/images/9.png" />
 	<title>9EED's webiste</title>
