--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <head>
-
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CDEP7T1MEX"></script>
 	<script>
@@ -13,7 +12,7 @@
 	<!---->
 
 	<link rel="stylesheet" href="./files/style.css">
-	<link rel="icon" type="image/x-icon" href="./files/images/9.png" />
+	<link rel="icon" type="image/x-icon" href="./files/images/ui/9.png" />
 	<title>9EED's webiste</title>
 	<meta charset="UTF-8" />
 	<meta name="description" content="9EED's website">
@@ -27,8 +26,8 @@
 		  <canvas id='canvas'></canvas>
 	</div>
 
-	<div id="show-list">
-		<img src="./files/images/menu.png">
+	<div id="nav-list">
+		<img src="./files/images/ui/menu.png">
 		<div id="list">
 			<div id="list-title">shortcuts</div>
 			<a class="list-item" href="#landing-page">landing page</a>
@@ -42,7 +41,7 @@
 	<div id="landing-page" tabindex="1" >
 		<div id="main-title">9EED's webiste</div>
 		<a tabindex="-1" href="#about-me-page" id="down">
-			<img src="./files/images/down.png" alt="down">
+			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 	
@@ -63,7 +62,7 @@
 			<div id="skill-set">
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/web.png">
+						<img src="./files/images/skills/web.png">
 					</div>
 					<div class="skill-title">Web dev</div>
 					<div class="skill-details">
@@ -72,7 +71,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/drawing.png">
+						<img src="./files/images/skills/drawing.png">
 					</div>
 					<div class="skill-title">drawing</div>
 					<div class="skill-details">
@@ -81,7 +80,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/3D.png">
+						<img src="./files/images/skills/3D.png">
 					</div>
 					<div class="skill-title">3D animation</div>
 					<div class="skill-details">
@@ -90,11 +89,11 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/image.jpg">
+						<img src="./files/images/skills/ui.png">
 					</div>
-					<div class="skill-title">skill4</div>
+					<div class="skill-title">UI design</div>
 					<div class="skill-details">
-						skill
+						user interface design
 					</div>
 				</a>
 			</div>
@@ -111,7 +110,7 @@
 								connect-4
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/connect-4.jpg" alt="connect-4" />
+								<img class="project-image" src="./files/images/projects/connect-4.jpg" alt="connect-4" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
@@ -119,7 +118,7 @@
 								conway's game of life
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/conways-game-of-life.jpg" alt="conways-game-of-life" />
+								<img class="project-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="project">
@@ -127,7 +126,7 @@
 								chimist
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/chimist.jpg" alt="chimist" />
+								<img class="project-image" src="./files/images/projects/chimist.jpg" alt="chimist" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="project">
@@ -135,7 +134,7 @@
 								turn-based
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/turn-based.jpg" alt="turn-based" />
+								<img class="project-image" src="./files/images/projects/turn-based.jpg" alt="turn-based" />
 							</div>
 						</a>
 						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="project">
@@ -143,15 +142,15 @@
 								9EED's website
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/9EED's-website.jpg" alt="9EED's webiste" />
+								<img class="project-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
 							</div>
 						</a>
 						<a tabindex="-1" class="project">
 							<div class="project-title">
-								project 6
+								WIP
 							</div>
 							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/image.jpg" alt="chimken" />
+								
 							</div>
 						</a>
 				</div>
@@ -165,7 +164,7 @@
 			<div id="contacts">
 				<a tabindex="-1" class="contact" id="email">
 					<div class="contact-image">
-						<img src="./files/images/email.png" alt="email">
+						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
 					<div class="contact-title">email</div>
 					<div class="contact-details">
@@ -174,7 +173,7 @@
 				</a>
 				<a tabindex="-1" class="contact" id="phone">
 					<div class="contact-image">
-						<img src="./files/images/phone.png" alt="phone">
+						<img src="./files/images/contacts/phone.png" alt="phone">
 					</div>
 					<div class="contact-title">phone</div>
 					<div class="contact-details">
@@ -183,7 +182,7 @@
 				</a>
 				<a tabindex="-1" class="contact" id="github" href="https://github.com/9EED" target="_blank">
 					<div class="contact-image">
-						<img src="./files/images/github.png" alt="github">
+						<img src="./files/images/contacts/github.png" alt="github">
 					</div>
 					<div class="contact-title">github</div>
 					<div class="contact-details">
@@ -192,7 +191,7 @@
 				</a>
 				<a tabindex="-1" class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="contact-image">
-						<img src="./files/images/instagram.png" alt="instagram">
+						<img src="./files/images/contacts/instagram.png" alt="instagram">
 					</div>
 					<div class="contact-title">instagram</div>
 					<div class="contact-details">
@@ -204,8 +203,8 @@
 	</div>
 	
 	<footer id="footer" tabindex="6">
-		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1">Icons8 </a></div>
-		<div>this website is a work in progress</div>
+		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
+		<div>made by me <a href="https://9EED.github.io/9EED/" tabindex="-1" class="link" >9EED</a></div>
 	</footer>
 
 </body>
