--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</a>
 				<a tabindex="-1" class="skill">
 					<div class="skill-image">
-						<img src="./files/images/skills/3D.png">
+						<img src="./files/images/skills/3d.png">
 					</div>
 					<div class="skill-title">3D animation</div>
 					<div class="skill-details">
