--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div id="about-me-container">
 			<div id="about-me-title">about me</div>
 			<div id="about-me">
-				Hello I am Zeghdani Salah eddine also known as 9EED,
+				Hello I am Zeghdani Salah eddine also known as 9EED (pronunced Nined),
 				I'm a web developer an artist and a high-school student
 				in Algeria.
 			</div>
