--- a/drawing.html
+++ b/drawing.html
@@ -60,7 +60,7 @@
 		<div id="skill-set-container">
 			<div id="skill-set-title">skill set</div>
 			<div id="skill-set">
-				<a href="./web.html" tabindex="-1" class="skill">
+				<a href="./files/pages/web.html" tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/skills/web.png">
 					</div>
@@ -69,7 +69,7 @@
 						designing websites using HTML CSS and JavaScript
 					</div>
 				</a>
-				<a href="./drawing.html" tabindex="-1" class="skill">
+				<a href="./files/pages/drawing.html" tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/skills/drawing.png">
 					</div>
@@ -78,7 +78,7 @@
 						pincle and pen drawings on paper
 					</div>
 				</a>
-				<a href="./3d.html" tabindex="-1" class="skill">
+				<a href="./files/pages/3d.html" tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/skills/3d.png">
 					</div>
@@ -87,7 +87,7 @@
 						3D animation and modeling using blender
 					</div>
 				</a>
-				<a href="./ui.html" tabindex="-1" class="skill">
+				<a href="./files/pages/ui.html" tabindex="-1" class="skill">
 					<div class="skill-image">
 						<img src="./files/images/skills/ui.png">
 					</div>
