--- a/drawing.html
+++ b/drawing.html
@@ -30,174 +30,128 @@
 		<img src="./files/images/ui/menu.png">
 		<div id="list">
 			<div id="list-title">shortcuts</div>
-			<a class="list-item" href="#landing-page">landing page</a>
-			<a class="list-item" href="#about-me-page">about me</a>
-			<a class="list-item" href="#skill-set-page">skill set</a>
-			<a class="list-item" href="#projects-page">projects</a>
-			<a class="list-item" href="#contacts-page">contacts</a>
+			<a class="list-item" href="#">item</a>
+			<a class="list-item" href="#">item</a>
+			<a class="list-item" href="#">item</a>
+			<a class="list-item" href="#">item</a>
+			<a class="list-item" href="#">item</a>
 		</div>
 	</div>
 	
 	<div id="landing-page" tabindex="1" >
-		<div id="main-title">9EED's webiste</div>
-		<a tabindex="-1" href="#about-me-page" id="down">
+		<div id="main-title">page name</div>
+		<a tabindex="-1" href="#paragraph-page" id="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 	
-	<div id="about-me-page" tabindex="2" >
-		<div id="about-me-container">
-			<div id="about-me-title">about me</div>
-			<div id="about-me">
-				Hello I am Zeghdani Salah eddine also known as 9EED (pronunced Nined),
-				I'm a web developer an artist and a high-school student
-				in Algeria.
+	<div id="paragraph-page" tabindex="2" >
+		<div id="paragraph-container">
+			<div id="paragraph-title">paragraph</div>
+			<div id="paragraph">
+				paragraph...
 			</div>
 		</div>
 	</div>
 
-	<div id="skill-set-page" tabindex="3" >
-		<div id="skill-set-container">
-			<div id="skill-set-title">skill set</div>
-			<div id="skill-set">
-				<a href="./files/pages/web.html" tabindex="-1" class="skill">
-					<div class="skill-image">
-						<img src="./files/images/skills/web.png">
+	<div id="four-celled-page" tabindex="3" >
+		<div id="four-celled-container">
+			<div id="four-celled-title">title</div>
+			<div id="four-celled">
+				<a href="#" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
+						<img src="./files/images/image.jpg" alt="img" />
 					</div>
-					<div class="skill-title">Web dev</div>
-					<div class="skill-details">
-						designing websites using HTML CSS and JavaScript
-					</div>
-				</a>
-				<a href="./files/pages/drawing.html" tabindex="-1" class="skill">
-					<div class="skill-image">
-						<img src="./files/images/skills/drawing.png">
-					</div>
-					<div class="skill-title">drawing</div>
-					<div class="skill-details">
-						pincle and pen drawings on paper
+					<div class="four-celled-cell-title">sub-title</div>
+					<div class="four-celled-cell-details">
+						details
 					</div>
 				</a>
-				<a href="./files/pages/3d.html" tabindex="-1" class="skill">
-					<div class="skill-image">
-						<img src="./files/images/skills/3d.png">
+				<a href="#" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
+						<img src="./files/images/image.jpg" alt="img" />
 					</div>
-					<div class="skill-title">3D animation</div>
-					<div class="skill-details">
-						3D animation and modeling using blender
+					<div class="four-celled-cell-title">sub-title</div>
+					<div class="four-celled-cell-details">
+						details
 					</div>
 				</a>
-				<a href="./files/pages/ui.html" tabindex="-1" class="skill">
-					<div class="skill-image">
-						<img src="./files/images/skills/ui.png">
+				<a href="#" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
+						<img src="./files/images/image.jpg" alt="img" />
 					</div>
-					<div class="skill-title">UI design</div>
-					<div class="skill-details">
-						user interface design
+					<div class="four-celled-cell-title">sub-title</div>
+					<div class="four-celled-cell-details">
+						details
+					</div>
+				</a>
+				<a href="#" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
+						<img src="./files/images/image.jpg" alt="img" />
+					</div>
+					<div class="four-celled-cell-title">sub-title</div>
+					<div class="four-celled-cell-details">
+						details
 					</div>
 				</a>
 			</div>
 		</div>
 	</div>
 
-	<div id="projects-page" tabindex="4" >
-			<div id="projects-container">
-				<div id="projects">
-					<div id="top-projects-title">top projects</div>
-					<div id="projects-grid">
-						<a tabindex="-1" href="https://9EED.github.io/connect-4" target="_blank" class="project">
-							<div class="project-title">
-								connect-4
+	<div class="six-celled-page" tabindex="4" >
+			<div class="six-celled-container">
+				<div class="six-celled">
+					<div class="six-celled-title">sub-title</div>
+					<div class="six-celled-grid">
+						<a tabindex="-1" href="#" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/connect-4.jpg" alt="connect-4" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
-							<div class="long-title">
-								conway's game of life
-							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="project">
-							<div class="project-title">
-								chimist
+						<a tabindex="-1" href="#" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/chimist.jpg" alt="chimist" />
-							</div>
-						</a>
-						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="project">
-							<div class="project-title">
-								turn-based
-							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/turn-based.jpg" alt="turn-based" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="project">
-							<div class="project-title">
-								9EED's website
+						<a tabindex="-1" href="#" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
 							</div>
 						</a>
-						<a tabindex="-1" class="project">
-							<div class="project-title">
-								WIP
+						<a tabindex="-1" href="#" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
 							</div>
-							<div class="project-image-holder" >
-								
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+							</div>
+						</a>
+						<a tabindex="-1" href="#" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
+							</div>
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
+							</div>
+						</a>
+						<a tabindex="-1" class="six-celled-cell">
+							<div class="six-celled-cell-title">
+								sub-title
+							</div>
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/image.jpg" alt="image" />
 							</div>
 						</a>
 				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="contacts-page" tabindex="5" >
-		<div id="contacts-container">
-			<div id="contacts-title">contacts</div>
-			<div id="contacts">
-				<a tabindex="-1" class="contact" id="email">
-					<div class="contact-image">
-						<img src="./files/images/contacts/email.png" alt="email">
-					</div>
-					<div class="contact-title">email</div>
-					<div class="contact-details">
-						zeghdns@gmail.com
-					</div>
-				</a>
-				<a tabindex="-1" class="contact" id="phone">
-					<div class="contact-image">
-						<img src="./files/images/contacts/phone.png" alt="phone">
-					</div>
-					<div class="contact-title">phone</div>
-					<div class="contact-details">
-						0123456789
-					</div>
-				</a>
-				<a tabindex="-1" class="contact" id="github" href="https://github.com/9EED" target="_blank">
-					<div class="contact-image">
-						<img src="./files/images/contacts/github.png" alt="github">
-					</div>
-					<div class="contact-title">github</div>
-					<div class="contact-details">
-						@9EED
-					</div>
-				</a>
-				<a tabindex="-1" class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
-					<div class="contact-image">
-						<img src="./files/images/contacts/instagram.png" alt="instagram">
-					</div>
-					<div class="contact-title">instagram</div>
-					<div class="contact-details">
-						@salah.zeghdani
-					</div>
-				</a>
 			</div>
 		</div>
 	</div>
