--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<div id="list">
 			<div id="list-title">shortcuts</div>
 			<a class="list-item" href="#landing-page">landing page</a>
-			<a class="list-item" href="#about-me-page">about me</a>
-			<a class="list-item" href="#skill-set-page">skill set</a>
+			<a class="list-item" href="#paragraph-page">about me</a>
+			<a class="list-item" href="#four-celled-page">skill set</a>
 			<a class="list-item" href="#projects-page">projects</a>
 			<a class="list-item" href="#contacts-page">contacts</a>
 		</div>
@@ -40,15 +40,15 @@
 	
 	<div id="landing-page" tabindex="1" >
 		<div id="main-title">9EED's webiste</div>
-		<a tabindex="-1" href="#about-me-page" id="down">
+		<a tabindex="-1" href="#paragraph-page" id="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 	
-	<div id="about-me-page" tabindex="2" >
-		<div id="about-me-container">
-			<div id="about-me-title">about me</div>
-			<div id="about-me">
+	<div id="paragraph-page" tabindex="2" >
+		<div id="paragraph-container">
+			<div id="paragraph-title">about me</div>
+			<div id="paragraph">
 				Hello I am Zeghdani Salah eddine also known as 9EED (pronunced Nined),
 				I'm a web developer an artist and a high-school student
 				in Algeria.
@@ -56,43 +56,43 @@
 		</div>
 	</div>
 
-	<div id="skill-set-page" tabindex="3" >
-		<div id="skill-set-container">
-			<div id="skill-set-title">skill set</div>
-			<div id="skill-set">
-				<a href="./web.html" tabindex="-1" class="skill">
-					<div class="skill-image">
+	<div id="four-celled-page" tabindex="3" >
+		<div id="four-celled-container">
+			<div id="four-celled-title">skill set</div>
+			<div id="four-celled">
+				<a href="./web.html" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/web.png">
 					</div>
-					<div class="skill-title">Web dev</div>
-					<div class="skill-details">
+					<div class="four-celled-cell-title">Web dev</div>
+					<div class="four-celled-cell-details">
 						designing websites using HTML CSS and JavaScript
 					</div>
 				</a>
-				<a href="./drawing.html" tabindex="-1" class="skill">
-					<div class="skill-image">
+				<a href="./drawing.html" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/drawing.png">
 					</div>
-					<div class="skill-title">drawing</div>
-					<div class="skill-details">
+					<div class="four-celled-cell-title">drawing</div>
+					<div class="four-celled-cell-details">
 						pincle and pen drawings on paper
 					</div>
 				</a>
-				<a href="./3d.html" tabindex="-1" class="skill">
-					<div class="skill-image">
+				<a href="./3d.html" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/3d.png">
 					</div>
-					<div class="skill-title">3D animation</div>
-					<div class="skill-details">
+					<div class="four-celled-cell-title">3D animation</div>
+					<div class="four-celled-cell-details">
 						3D animation and modeling using blender
 					</div>
 				</a>
-				<a href="./ui.html" tabindex="-1" class="skill">
-					<div class="skill-image">
+				<a href="./ui.html" tabindex="-1" class="four-celled-cell">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/ui.png">
 					</div>
-					<div class="skill-title">UI design</div>
-					<div class="skill-details">
+					<div class="four-celled-cell-title">UI design</div>
+					<div class="four-celled-cell-details">
 						user interface design
 					</div>
 				</a>
@@ -100,56 +100,56 @@
 		</div>
 	</div>
 
-	<div id="projects-page" tabindex="4" >
-			<div id="projects-container">
-				<div id="projects">
-					<div id="top-projects-title">top projects</div>
-					<div id="projects-grid">
-						<a tabindex="-1" href="https://9EED.github.io/connect-4" target="_blank" class="project">
-							<div class="project-title">
+	<div class="six-celled-page" tabindex="4" >
+			<div class="six-celled-container">
+				<div class="six-celled">
+					<div class="six-celled-title">top projects</div>
+					<div class="six-celled-grid">
+						<a tabindex="-1" href="https://9EED.github.io/connect-4" target="_blank" class="six-celled-cell">
+							<div class="six-celled-cell-title">
 								connect-4
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/connect-4.jpg" alt="connect-4" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/projects/connect-4.jpg" alt="connect-4" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="project">
+						<a tabindex="-1" href="https://9EED.github.io/conways-game-of-life" target="_blank" class="six-celled-cell">
 							<div class="long-title">
 								conway's game of life
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/projects/conways-game-of-life.jpg" alt="conways-game-of-life" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="project">
-							<div class="project-title">
+						<a tabindex="-1" href="https://9EED.github.io/chimist" target="_blank" class="six-celled-cell">
+							<div class="six-celled-cell-title">
 								chimist
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/chimist.jpg" alt="chimist" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/projects/chimist.jpg" alt="chimist" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="project">
-							<div class="project-title">
+						<a tabindex="-1" href="https://9EED.github.io/turn-based" target="_blank" class="six-celled-cell">
+							<div class="six-celled-cell-title">
 								turn-based
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/turn-based.jpg" alt="turn-based" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/projects/turn-based.jpg" alt="turn-based" />
 							</div>
 						</a>
-						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="project">
-							<div class="project-title">
+						<a tabindex="-1" href="https://9EED.github.io/9EED" target="_blank" class="six-celled-cell">
+							<div class="six-celled-cell-title">
 								9EED's website
 							</div>
-							<div class="project-image-holder" >
-								<img class="project-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
+							<div class="six-celled-cell-image-holder" >
+								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
 							</div>
 						</a>
-						<a tabindex="-1" class="project">
-							<div class="project-title">
+						<a tabindex="-1" class="six-celled-cell">
+							<div class="six-celled-cell-title">
 								WIP
 							</div>
-							<div class="project-image-holder" >
+							<div class="six-celled-cell-image-holder" >
 								
 							</div>
 						</a>
@@ -158,43 +158,43 @@
 		</div>
 	</div>
 
-	<div id="contacts-page" tabindex="5" >
-		<div id="contacts-container">
-			<div id="contacts-title">contacts</div>
-			<div id="contacts">
-				<a tabindex="-1" class="contact" id="email">
-					<div class="contact-image">
+	<div id="four-celled-page" tabindex="5" >
+		<div id="four-celled-container">
+			<div id="four-celled-title">contacts</div>
+			<div id="four-celled">
+				<a tabindex="-1" class="four-celled-cell" id="email">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
-					<div class="contact-title">email</div>
-					<div class="contact-details">
+					<div class="four-celled-cell-title">email</div>
+					<div class="four-celled-cell-details">
 						zeghdns@gmail.com
 					</div>
 				</a>
-				<a tabindex="-1" class="contact" id="phone">
-					<div class="contact-image">
+				<a tabindex="-1" class="four-celled-cell" id="phone">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/phone.png" alt="phone">
 					</div>
-					<div class="contact-title">phone</div>
-					<div class="contact-details">
+					<div class="four-celled-cell-title">phone</div>
+					<div class="four-celled-cell-details">
 						0123456789
 					</div>
 				</a>
-				<a tabindex="-1" class="contact" id="github" href="https://github.com/9EED" target="_blank">
-					<div class="contact-image">
+				<a tabindex="-1" class="four-celled-cell" id="github" href="https://github.com/9EED" target="_blank">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/github.png" alt="github">
 					</div>
-					<div class="contact-title">github</div>
-					<div class="contact-details">
+					<div class="four-celled-cell-title">github</div>
+					<div class="four-celled-cell-details">
 						@9EED
 					</div>
 				</a>
-				<a tabindex="-1" class="contact" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
-					<div class="contact-image">
+				<a tabindex="-1" class="four-celled-cell" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
+					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/instagram.png" alt="instagram">
 					</div>
-					<div class="contact-title">instagram</div>
-					<div class="contact-details">
+					<div class="four-celled-cell-title">instagram</div>
+					<div class="four-celled-cell-details">
 						@salah.zeghdani
 					</div>
 				</a>
