--- a/template.html
+++ b/template.html
@@ -39,7 +39,7 @@
 	</div>
 	
 	<div id="landing-page" tabindex="1" >
-		<div id="main-title">page name</div>
+		<div id="main-title">template page</div>
 		<a tabindex="-1" href="#paragraph-page" id="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
