--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
 		  <canvas id='canvas'></canvas>
 	</div>
 
-	<div id="nav-list">
+	<div class="nav-list">
 		<img src="./files/images/ui/menu.png">
-		<div id="list">
-			<div id="list-title">shortcuts</div>
+		<div class="list">
+			<div class="list-title">shortcuts</div>
 			<a class="list-item" href="#landing-page">landing page</a>
-			<a class="list-item" href="#paragraph-page">about me</a>
-			<a class="list-item" href="#four-celled-page">skill set</a>
-			<a class="list-item" href="#projects-page">projects</a>
-			<a class="list-item" href="#contacts-page">contacts</a>
+			<a class="list-item" href="#about-me">about me</a>
+			<a class="list-item" href="#skill-set">skill set</a>
+			<a class="list-item" href="#projects">projects</a>
+			<a class="list-item" href="#contacts">contacts</a>
 		</div>
 	</div>
 	
-	<div id="landing-page" tabindex="1" >
-		<div id="main-title">9EED's webiste</div>
-		<a tabindex="-1" href="#paragraph-page" id="down">
+	<div class="landing-page" id="landing-page" tabindex="1" >
+		<div class="main-title">9EED's webiste</div>
+		<a tabindex="-1" href="#about-me" class="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 	
-	<div id="paragraph-page" tabindex="2" >
-		<div id="paragraph-container">
-			<div id="paragraph-title">about me</div>
-			<div id="paragraph">
+	<div class="paragraph-page" id="about-me" tabindex="2" >
+		<div class="paragraph-container">
+			<div class="paragraph-title">about me</div>
+			<div class="paragraph">
 				Hello I am Zeghdani Salah eddine also known as 9EED (pronunced Nined),
 				I'm a web developer an artist and a high-school student
 				in Algeria.
@@ -56,10 +56,10 @@
 		</div>
 	</div>
 
-	<div id="four-celled-page" tabindex="3" >
-		<div id="four-celled-container">
-			<div id="four-celled-title">skill set</div>
-			<div id="four-celled">
+	<div class="four-celled-page" id="skill-set" tabindex="3" >
+		<div class="four-celled-container">
+			<div class="four-celled-title">skill set</div>
+			<div class="four-celled">
 				<a href="./web.html" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/skills/web.png">
@@ -100,7 +100,7 @@
 		</div>
 	</div>
 
-	<div class="six-celled-page" tabindex="4" >
+	<div class="six-celled-page" id="projects" tabindex="4" >
 			<div class="six-celled-container">
 				<div class="six-celled">
 					<div class="six-celled-title">top projects</div>
@@ -158,11 +158,11 @@
 		</div>
 	</div>
 
-	<div id="four-celled-page" tabindex="5" >
-		<div id="four-celled-container">
-			<div id="four-celled-title">contacts</div>
-			<div id="four-celled">
-				<a tabindex="-1" class="four-celled-cell" id="email">
+	<div class="four-celled-page" id="contacts" tabindex="5" >
+		<div class="four-celled-container">
+			<div class="four-celled-title">contacts</div>
+			<div class="four-celled">
+				<a tabindex="-1" class="four-celled-cell" class="email">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
@@ -171,7 +171,7 @@
 						zeghdns@gmail.com
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell" id="phone">
+				<a tabindex="-1" class="four-celled-cell" class="phone">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/phone.png" alt="phone">
 					</div>
@@ -180,7 +180,7 @@
 						0123456789
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell" id="github" href="https://github.com/9EED" target="_blank">
+				<a tabindex="-1" class="four-celled-cell" class="github" href="https://github.com/9EED" target="_blank">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/github.png" alt="github">
 					</div>
@@ -189,7 +189,7 @@
 						@9EED
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell" id="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
+				<a tabindex="-1" class="four-celled-cell" class="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/instagram.png" alt="instagram">
 					</div>
@@ -202,8 +202,8 @@
 		</div>
 	</div>
 	
-	<footer id="footer" tabindex="6">
-		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
+	<footer class="footer" tabindex="6">
+		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
 		<div>made by me <a href="https://9EED.github.io/9EED/" tabindex="-1" class="link" >9EED</a></div>
 	</footer>
 
