--- a/template.html
+++ b/template.html
@@ -26,10 +26,10 @@
 		  <canvas id='canvas'></canvas>
 	</div>
 
-	<div id="nav-list">
+	<div class="nav-list">
 		<img src="./files/images/ui/menu.png">
-		<div id="list">
-			<div id="list-title">shortcuts</div>
+		<div class="list">
+			<div class="list-title">shortcuts</div>
 			<a class="list-item" href="#">item</a>
 			<a class="list-item" href="#">item</a>
 			<a class="list-item" href="#">item</a>
@@ -38,26 +38,26 @@
 		</div>
 	</div>
 	
-	<div id="landing-page" tabindex="1" >
-		<div id="main-title">template page</div>
-		<a tabindex="-1" href="#paragraph-page" id="down">
+	<div class="landing-page" tabindex="1" >
+		<div class="main-title">template page</div>
+		<a tabindex="-1" href="#" class="down">
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
 	
-	<div id="paragraph-page" tabindex="2" >
-		<div id="paragraph-container">
-			<div id="paragraph-title">paragraph</div>
-			<div id="paragraph">
+	<div class="paragraph-page" tabindex="2" >
+		<div class="paragraph-container">
+			<div class="paragraph-title">paragraph</div>
+			<div class="paragraph">
 				paragraph...
 			</div>
 		</div>
 	</div>
 
-	<div id="four-celled-page" tabindex="3" >
-		<div id="four-celled-container">
-			<div id="four-celled-title">title</div>
-			<div id="four-celled">
+	<div class="four-celled-page" tabindex="3" >
+		<div class="four-celled-container">
+			<div class="four-celled-title">title</div>
+			<div class="four-celled">
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/image.jpg" alt="img" />
@@ -101,7 +101,7 @@
 	<div class="six-celled-page" tabindex="4" >
 			<div class="six-celled-container">
 				<div class="six-celled">
-					<div class="six-celled-title">sub-title</div>
+					<div class="six-celled-title">title</div>
 					<div class="six-celled-grid">
 						<a tabindex="-1" href="#" class="six-celled-cell">
 							<div class="six-celled-cell-title">
@@ -156,8 +156,8 @@
 		</div>
 	</div>
 	
-	<footer id="footer" tabindex="6">
-		<div id="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
+	<footer class="footer" tabindex="6">
+		<div class="Icons8">icons by <a target="_blank" href="https://icons8.com" tabindex="-1" class="link" >Icons8 </a></div>
 		<div>made by me <a href="https://9EED.github.io/9EED/" tabindex="-1" class="link" >9EED</a></div>
 	</footer>
 
