--- a/template.html
+++ b/template.html
@@ -45,6 +45,32 @@
 		</a>
 	</div>
 	
+	<div class="gallery-page" tabindex="2" >
+		<div class="gallery-container">
+			<div class="gallery-title">gallery</div>
+			<div class="gallery">
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+				<div class="gallery-item" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="paragraph-page" tabindex="2" >
 		<div class="paragraph-container">
 			<div class="paragraph-title">paragraph</div>
