--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
 								<img class="six-celled-cell-image" src="./files/images/projects/9EED's-website.jpg" alt="9EED's webiste" />
 							</div>
 						</a>
-						<a tabindex="-1" class="six-celled-cell">
+						<a tabindex="-1" href="https://9eed.github.io/super-box/" target="_blank" class="six-celled-cell">
 							<div class="six-celled-cell-title">
-								WIP
+								super-box (wip)
 							</div>
 							<div class="six-celled-cell-image-holder" >
-								
+								<img class="six-celled-cell-image" src="./files/images/projects/super-box.PNG" alt="super-box" />
 							</div>
 						</a>
 				</div>
