--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 		  <canvas id='canvas'></canvas>
 	</div>
 
+	<div class="nav-bar">
+		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
+		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
+		<a class="nav-bar-item" href="./template.html">TEMPLATE</a>
+	</div>
+
 	<div class="nav-list">
 		<img src="./files/images/ui/menu.png">
 		<div class="list">
