--- a/template.html
+++ b/template.html
@@ -22,8 +22,15 @@
 </head>
 <body>
 
-  	<div id="background">
-		  <canvas id='canvas'></canvas>
+	<div id="background">
+		<canvas id='canvas'></canvas>
+    </div>
+
+	<div class="nav-bar">
+		<a class="nav-bar-item" href="./index.html#landing-page">HOME</a>
+		<a class="nav-bar-item" href="./index.html#contacts">CONTACTS</a>
+		<a class="nav-bar-item" href="./index.html#projects">PROJECTS</a>
+		<a class="nav-bar-item" href="./template.html">TEMPLATE</a>
 	</div>
 
 	<div class="nav-list">
@@ -44,32 +51,6 @@
 			<img src="./files/images/ui/down.png" alt="down">
 		</a>
 	</div>
-	
-	<div class="gallery-page" tabindex="2" >
-		<div class="gallery-container">
-			<div class="gallery-title">gallery</div>
-			<div class="gallery">
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-				<div class="gallery-item" >
-					<img src="./files/images/image.jpg" alt="chimken">
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<div class="paragraph-page" tabindex="2" >
 		<div class="paragraph-container">
@@ -80,9 +61,35 @@
 		</div>
 	</div>
 
-	<div class="four-celled-page" tabindex="3" >
+	<div class="gallery-page" tabindex="3" >
+		<div class="gallery-container">
+			<div class="gallery-title">gallery</div>
+			<div class="gallery">
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+				<a class="gallery-item" href="./files/images/image.jpg" target="_blank" tabindex="-1" >
+					<img src="./files/images/image.jpg" alt="chimken">
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="four-celled-page" tabindex="4" >
 		<div class="four-celled-container">
-			<div class="four-celled-title">title</div>
+			<div class="four-celled-title">four celled</div>
 			<div class="four-celled">
 				<a href="#" tabindex="-1" class="four-celled-cell">
 					<div class="four-celled-cell-image">
@@ -124,10 +131,10 @@
 		</div>
 	</div>
 
-	<div class="six-celled-page" tabindex="4" >
+	<div class="six-celled-page" tabindex="5" >
 			<div class="six-celled-container">
 				<div class="six-celled">
-					<div class="six-celled-title">title</div>
+					<div class="six-celled-title">six celled</div>
 					<div class="six-celled-grid">
 						<a tabindex="-1" href="#" class="six-celled-cell">
 							<div class="six-celled-cell-title">
