--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<div class="four-celled-container">
 			<div class="four-celled-title">contacts</div>
 			<div class="four-celled">
-				<a tabindex="-1" class="four-celled-cell" class="email">
+				<a tabindex="-1" class="four-celled-cell" >
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/email.png" alt="email">
 					</div>
@@ -178,16 +178,16 @@
 						zeghdns@gmail.com
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell" class="phone">
+				<a tabindex="-1" class="four-celled-cell"target="_blank">
 					<div class="four-celled-cell-image">
-						<img src="./files/images/contacts/phone.png" alt="phone">
+						<img src="./files/images/contacts/discord.png" alt="discord">
 					</div>
-					<div class="four-celled-cell-title">phone</div>
+					<div class="four-celled-cell-title">discord</div>
 					<div class="four-celled-cell-details">
-						0123456789
+						9EED#4153
 					</div>
-				</a>
-				<a tabindex="-1" class="four-celled-cell" class="github" href="https://github.com/9EED" target="_blank">
+				</a>				
+				<a tabindex="-1" class="four-celled-cell" href="https://github.com/9EED" target="_blank">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/github.png" alt="github">
 					</div>
@@ -196,7 +196,7 @@
 						@9EED
 					</div>
 				</a>
-				<a tabindex="-1" class="four-celled-cell" class="instagram" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
+				<a tabindex="-1" class="four-celled-cell" href="https://www.instagram.com/salah.zeghdani/" target="_blank">
 					<div class="four-celled-cell-image">
 						<img src="./files/images/contacts/instagram.png" alt="instagram">
 					</div>
